--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 albumentations==0.2.3
 audioread==2.1.8
+brotlipy==0.7.0
 certifi==2020.6.20
+cffi @ file:///tmp/build/80754af9/cffi_1598370789085/work
+chardet==3.0.4
+cryptography @ file:///tmp/build/80754af9/cryptography_1598892041992/work
 cycler==0.10.0
 decorator==4.4.0
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
 imageio==2.5.0
 imgaug==0.2.6
 joblib==0.13.2
@@ -18,14 +23,22 @@ opencv-python-headless==4.1.0.25
 oyaml==0.9
 pandas==0.24.2
 Pillow==6.0.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
 pyparsing==2.4.0
+PySocks==1.7.1
 python-dateutil==2.8.0
 pytz==2019.1
 PyWavelets==1.0.3
 PyYAML==5.1.1
+requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 resampy==0.2.1
 scikit-image==0.15.0
 scikit-learn==0.21.2
 scipy==1.3.0
-six==1.12.0
+six==1.15.0
+SoundFile==0.10.3.post1
+torch @ https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
+torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
 tqdm==4.32.1
+urllib3 @ file:///tmp/build/80754af9/urllib3_1597086586889/work
