--- a/requirementsLinux.txt
+++ b/requirementsLinux.txt
@@ -1,6 +1,8 @@
 albumentations==0.2.3
 audioread==2.1.8
 brotlipy==0.7.0
+boto3==1.15.8
+botocore==1.18.8
 certifi==2020.6.20
 cffi @ file:///tmp/build/80754af9/cffi_1598370789085/work
 chardet==3.0.4
