--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ jobs:
     steps:
       - checkout
       - run:
-          command: pip install -r requirements.txt
+          command: |
+                  pip install -r requirements.txt
+                  pip install -r linuxRequirements.txt
+                  sudo apt-get install libsndfile1
           name: Instalando requerimientos
-      - run:
-          command: pip install -r linuxRequirements.txt
-          name: Instalando requerimientos específicos linux
       - run:
           command: python -m unittest -v
           name: Realizando Test Unitarios
