--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,31 @@
 version: 2.1
 
 jobs:
-  test-control-archivos:
+  test-build-dockerhub:
     docker:
-      - image: circleci/python:3.6
+      - image: circleci/golang:1.13.13-buster
     steps:
       - checkout
+      - setup_remote_docker
       - run:
+          name: Contruyendo imagen
+          command: docker build -t alienx456/inferenciatoradapa .
+      - run:
+          name: Corriendo Test Unitarios
+          command: docker run --workdir /inferenciator/
+                    -e CHANNEL_MEANS_FILE=$CHANNEL_MEANS_FILE
+                    -e CHANNEL_STDS_FILE=$CHANNEL_STDS_FILE
+                    -e DATA_PATH=$DATA_PATH
+                    -e DEVICE_NAME=$DEVICE_NAME
+                    -e MODEL_NAME=$MODEL_NAME
+                    -e MODEL_URL=$MODEL_URL
+                    --rm alienx456/inferenciatoradapa bash -c "python3 -m unittest -v"
+      - run:
+          name: Publicando imagen
           command: |
-                  pip install -r requirements.txt
-                  pip install -r linuxRequirements.txt
-                  sudo apt-get install libsndfile1
-          name: Instalando requerimientos
-      - run:
-          command: python -m unittest -v
-          name: Realizando Test Unitarios
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker push alienx456/inferenciatoradapa
 workflows:
   main:
     jobs:
-      - test-control-archivos
+      - test-build-image
