Added custom test config circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,20 @@
 version: 2.1
 
 jobs:
+  test-control-archivos:
+    docker:
+      - image: circleci/python:3.6
+    steps:
+      - checkout
+      - run:
+          command: |
+            pip install -r requirements.txt
+            pip install -r linuxRequirements.txt
+            sudo apt-get install libsndfile1
+          name: Instalando requerimientos
+      - run:
+          command: python -m unittest -v
+          name: Realizando Test Unitarios
   test-build-dockerhub:
     docker:
       - image: circleci/golang:1.13.13-buster
@@ -28,4 +42,4 @@ jobs:
 workflows:
   main:
     jobs:
-      - test-build-dockerhub
+      - test-control-archivos
