--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,19 @@ jobs:
 workflows:
   main:
     jobs:
+      - test-control-archivos
       - aws-ecr/build-and-push-image:
+          filters:
+            branches:
+              only: qa
+          requires:
+            - test-control-archivos
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
+          filters:
+            branches:
+              only: qa
           requires:
             - aws-ecr/build-and-push-image
           family: "inferencer-adapa"
