Added terraform init

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
           name: terraform
           command: |
             cd terraform &&
+            terraform init &&
             terraform apply -auto-approve -var="ecr_image_tag=${CIRCLE_SHA1}"
       - persist_to_workspace:
           root: .
