updated to use context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,7 @@ workflows:
       - sonar
       - test
       - aws-ecr/build-and-push-image:
+          context: AWSContext
           filters:
             branches:
               only:
@@ -83,6 +84,7 @@ workflows:
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
       - infrastructure-providing-and-deploy:
+          context: TerraformContext
           requires:
             - aws-ecr/build-and-push-image
 
