--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs:
   aws-ecr: circleci/aws-ecr@6.12.2
-  aws-ecs: circleci/aws-ecs@01.3.0
   sonarcloud: sonarsource/sonarcloud@1.0.2
 
 jobs:
@@ -22,10 +21,10 @@ jobs:
             pip install -r requirements.txt
             pip install -r linuxRequirements.txt
             sudo apt-get install libsndfile1
-          name: Instalando requerimientos
+          name: Installing requirements
       - run:
           command: python -m unittest -v
-          name: Realizando Test Unitarios
+          name: Running tests
   test-build-dockerhub:
     docker:
       - image: circleci/golang:1.13.13-buster
