--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
       - run:
           name: Terraform init
           command: |
-            cd terraform &&
+            cd IAC &&
             terraform init
       - run:
           name: Terraform provide and deploy
