--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,9 +85,8 @@ workflows:
       #    tag: "${CIRCLE_SHA1}"
       - infrastructure-providing-and-deploy:
           context:
-            - AWSContext
             - TerraformContext
-            - SoundMonitorTerraformContext
+            - IACTerraformInferencer
           #requires:
           #  - aws-ecr/build-and-push-image
 
