--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,7 @@ workflows:
           context:
             - TerraformContext
             - IACTerraformInferencer
+            - SoundMonitor-KafkaContext
           requires:
             - aws-ecr/build-and-push-image
 
