--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,7 @@ workflows:
             - TerraformContext
             - IACTerraformInferencer
             - SoundMonitor-KafkaContext
+            - SoundMonitor-IACCommonContext
           requires:
             - aws-ecr/build-and-push-image
 
