--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,9 +77,9 @@ workflows:
               only:
                 - master
                 - qa
-          requires:
-            - test
-            - sonar
+#          requires:
+#            - test
+#            - sonar
           create-repo: true
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
