--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ numba==0.44.0
 llvmlite==0.29.0
 kafka-python==2.0.1
 boto3==1.15.8
+torch @ https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
+torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
