--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ workflows:
             - IACTerraformInferencer
             - SoundMonitor-KafkaContext
             - SoundMonitor-IACCommonContext
-          requires:
-            - aws-ecr/build-and-push-image
+#          requires:
+#            - aws-ecr/build-and-push-image
 
 
