--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,9 +86,7 @@ workflows:
       - infrastructure-providing-and-deploy:
           context:
             - TerraformContext
-            - IACTerraformInferencer
-            - SoundMonitor-KafkaContext
-            - SoundMonitor-IACCommonContext
+            - KafkaAudioUploadContext
           requires:
             - aws-ecr/build-and-push-image
 
