--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,32 +62,32 @@ jobs:
           name: Terraform provide and deploy
           command: |
             cd IAC &&
-            terraform apply -auto-approve -var="ecr_image_tag=${CIRCLE_SHA1}"
+            terraform apply -auto-approve -var="ecr_image_tag=c663803626f94b6166bc4cf4c81ba498af8923c3"
 
 workflows:
   main:
     jobs:
-      - sonar
-      - test
-      - aws-ecr/build-and-push-image:
-          context: AWSContext
-          filters:
-            branches:
-              only:
-                - master
-                - qa
-                - feature/NewTypeDeployment
-          requires:
-            - test
-            - sonar
-          create-repo: true
-          repo: "${AWS_RESOURCE_NAME_PREFIX}"
-          tag: "${CIRCLE_SHA1}"
+#      - sonar
+#      - test
+#      - aws-ecr/build-and-push-image:
+#          context: AWSContext
+#          filters:
+#            branches:
+#              only:
+#                - master
+#                - qa
+#                - feature/NewTypeDeployment
+#          requires:
+#            - test
+#            - sonar
+#          create-repo: true
+#          repo: "${AWS_RESOURCE_NAME_PREFIX}"
+#          tag: "${CIRCLE_SHA1}"
       - infrastructure-providing-and-deploy:
           context:
             - TerraformContext
             - KafkaAudioUploadContext
           requires:
-            - aws-ecr/build-and-push-image
+#            - aws-ecr/build-and-push-image
 
 
