--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
             sudo apt-get install libsndfile1
           name: Installing requirements
       - run:
+          environment:
+            - DEVICE_NAME: cpu
           command: python -m unittest -v
           name: Running tests
   infrastructure-providing-and-deploy:
@@ -53,6 +55,9 @@ workflows:
           aws-access-key-id: TF_VAR_aws_provider_key
           aws-secret-access-key: TF_VAR_aws_provider_secret
           account-url: TF_VAR_aws_ecr_account_url
+          requires:
+            - sonar
+            - test
           filters:
             branches:
               only:
