--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             cd IAC &&
             terraform apply -auto-approve \
               -var="ecr_image_tag=${CIRCLE_SHA1}"\
-              -var="repository_name=${CIRCLE_PROJECT_REPONAME}"
+              -var="repository_name=${CIRCLE_PROJECT_REPONAME,,}"
 
 workflows:
   main:
@@ -51,7 +51,7 @@ workflows:
       - test
       - aws-ecr/build-and-push-image:
           context: TerraformContext
-          repo: "${CIRCLE_PROJECT_REPONAME}"
+          repo: "${CIRCLE_PROJECT_REPONAME,,}"
           tag: "${CIRCLE_SHA1}"
           create-repo: true
           aws-access-key-id: TF_VAR_aws_provider_key
