fixing bad substitution

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,15 @@ jobs:
             cd IAC &&
             terraform init
       - run:
-          name: Terraform provide and deploy
+          name: Terraform get map file
           command: |
             cd IAC &&
             export IAC_VERSION=$(grep -ohE 'ref=(.*?)"' inferencer.tf | sed 's/ref=//' | sed 's/"//') &&
-            wget "https://raw.githubusercontent.com/AlienX456/SoundMonitor-IAC-Infrastructure-Common/${IAC_VERSION}/map/topic-index-mapping.json" &&
+            wget "https://raw.githubusercontent.com/AlienX456/SoundMonitor-IAC-Infrastructure-Common/${IAC_VERSION}/map/topic-index-mapping.json"
+      - run:
+          name: Terraform apply
+          command: |
+            cd IAC &&
             terraform apply -auto-approve -var="ecr_image_tag=${CIRCLE_SHA1}" -var="repository_name=${CIRCLE_PROJECT_REPONAME,,}"
 
 workflows:
