--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,11 @@ jobs:
             wget "https://raw.githubusercontent.com/AlienX456/SoundMonitor-IAC-Infrastructure-Common/${IAC_VERSION}/map/topic-index-mapping.json"
       - run:
           name: Terraform apply
+          environment:
+            REPOSITORY_NAME: "${CIRCLE_PROJECT_REPONAME,,}"
           command: |
             cd IAC &&
-            terraform apply -auto-approve -var="ecr_image_tag=${CIRCLE_SHA1}" -var="repository_name=${CIRCLE_PROJECT_REPONAME,,}"
+            terraform apply -auto-approve -var="ecr_image_tag=${CIRCLE_SHA1}" -var="repository_name=${REPOSITORY_NAME}"
 
 workflows:
   main:
