--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - checkout
       - run:
           command: |
+            sudo apt-get update
             pip install -r requirements.txt
             sudo apt-get install libsndfile1
           name: Installing requirements
