--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - sonarcloud/scan
   test:
     docker:
-      - image: cimg/python:3.6
+      - image: circleci/python:3.6
     steps:
       - checkout
       - run:
@@ -29,7 +29,7 @@ jobs:
           name: Running tests
   infrastructure-providing-and-deploy:
     docker:
-      - image: hashicorp/terraform:light
+      - image: hashicorp/terraform:lights
     steps:
       - checkout
       - run:
