--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           name: Running tests
   infrastructure-providing-and-deploy:
     docker:
-      - image: hashicorp/terraform:lights
+      - image: hashicorp/terraform:light
     steps:
       - checkout
       - run:
@@ -57,7 +57,7 @@ workflows:
       - test
       - aws-ecr/build-and-push-image:
           context: TerraformContext
-          repo: "${CIRCLE_PROJECT_REPONAME,,}"
+          repo: "${CIRCLE_PROJECT_REPONAME}"
           tag: "${CIRCLE_SHA1}"
           create-repo: true
           aws-access-key-id: TF_VAR_aws_provider_key
