--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,5 +73,5 @@ workflows:
       - infrastructure-providing-and-deploy:
           context:
             - TerraformContext
-
-
+          requires:
+            - aws-ecr/build-and-push-image
