--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ workflows:
           repo: "${CIRCLE_PROJECT_REPONAME,,}"
           tag: "${CIRCLE_SHA1}"
           create-repo: true
+          dockerfile: Dockerfile
           aws-access-key-id: TF_VAR_aws_provider_key
           aws-secret-access-key: TF_VAR_aws_provider_secret
           account-url: TF_VAR_aws_ecr_account_url
