--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  aws-ecr: circleci/aws-ecr@6.12.2
+  aws-ecr: circleci/aws-ecr@7.0.0
   sonarcloud: sonarsource/sonarcloud@1.0.2
 
 jobs:
@@ -61,9 +61,9 @@ workflows:
           tag: "${CIRCLE_SHA1}"
           create-repo: true
           dockerfile: Dockerfile
-          aws-access-key-id: TF_VAR_aws_provider_key
-          aws-secret-access-key: TF_VAR_aws_provider_secret
-          account-url: TF_VAR_aws_ecr_account_url
+          aws-access-key-id: ${TF_VAR_aws_provider_key}
+          aws-secret-access-key: ${TF_VAR_aws_provider_secret}
+          account-url: ${TF_VAR_aws_ecr_account_url}
           requires:
             - sonar
             - test
