--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ workflows:
       - test
       - aws-ecr/build-and-push-image:
           context: TerraformContext
-          repo: "${CIRCLE_PROJECT_REPONAME,,}"
+          repo: "${CIRCLE_PROJECT_REPONAME}"
           tag: "${CIRCLE_SHA1}"
           create-repo: true
           dockerfile: Dockerfile
